# libcpuid

./: .gitignore  .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Makefile.am  README  Readme.md  bump_version.sh  cmake-format.py  configure.ac  libcpuid.dsw  libcpuid.pc.in  libcpuid.sln  libcpuid_vc10.sln  libcpuid_vc71.sln  libcpuid_vc9.sln
.github/workflows/: build_dragonflybsd.yml  build_freebsd.yml  build_linux.yml  build_macos.yml  build_netbsd.yml  build_omnios.yml  build_openbsd.yml  build_windows.yml  deploy_docs.yml  docs.yml  python.yml  release.yml  unix.yml  windows.yml
cmake/: FindLinuxKernelHeaders.cmake
contrib/MSR Driver/: TmpRdr.sys  TmpRdr64.sys
contrib/MSR Driver/Kernel/: TmpRdr.c  TmpRdr.vcproj  resource.h  tmprdr.rc
cpuid_tool/: CMakeLists.txt  Makefile.am  Makefile.x64  cpuid_tool.c  cpuid_tool.dsp  cpuid_tool.vcproj  cpuid_tool_vc10.vcxproj  cpuid_tool_vc10.vcxproj.filters  cpuid_tool_vc71.vcproj
debian/: README.Debian  README.source  changelog  control  copyright  cpuidtool.install  libcpuid-dev.install  libcpuid11.install  libcpuid13-dev.install  rules
drivers/: .gitignore  CMakeLists.txt
drivers/arm/: CMakeLists.txt
drivers/arm/freebsd/: CMakeLists.txt  Makefile.in  README.md  cpuid.c
drivers/arm/linux/: CMakeLists.txt  Makefile.in  README.md  cpuid.c  dkms.conf.in
libcpuid/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile.am  Makefile.x64  Makefile.x86  amd_code_t.h  asm-bits.c  asm-bits.h  centaur_code_t.h  check-consistency.py  cpuid_main.c  embed_drivers.cpp  exports.def  intel_code_t.h  libcpuid.dsp  libcpuid.h  libcpuid.sym  libcpuid.vcproj  libcpuid_arm_driver.h  libcpuid_constants.h  libcpuid_ctype.h  libcpuid_internal.h  libcpuid_types.h  libcpuid_util.c  libcpuid_util.h  libcpuid_vc10.vcxproj  libcpuid_vc10.vcxproj.filters  libcpuid_vc71.vcproj  libcpuid_vc9.vcproj  msrdriver.c  rdcpuid.c  rdcpuid.h  rdmsr.c  rdtsc.c  recog_amd.c  recog_amd.h  recog_arm.c  recog_arm.h  recog_centaur.c  (+3 more)
python/: README.md  ffi_build.py  ffi_build_rtd.py  pyproject.toml  setup.py
python/docs/: conf.py  index.rst
python/docs/api/: clock.rst  cpuid.rst  enums.rst  errors.rst  info.rst  libcpuid.rst  msr.rst  raw.rst
python/src/libcpuid/: __init__.py  _ffi_build.py  _ffi_build_rtd.py  _ffi_build_utils.py  _utils.py  arm.py  clock.py  consts.py  cpuid.py  cpusgx.py  enums.py  errors.py  info.py  msr.py  raw.py  sgx.py  types.py  x86.py
python/tests/: sanity_test.py
tests/: CMakeLists.txt  Makefile.am  add_test.py  convert_instlatx64.c  create_test.py  extract_test.py  run_tests.py  test_invariant_embed_windows_drivers.cpp  tests_stash.txt  update_tests.sh
tests/amd/: README.md
tests/amd/bobcat/: amd-c-50-processor.test  amd-e-350-processor.test  amd-e-450-apu-with-radeon-hd-graphics.test  amd-g-t56n-processor.test  brazos-zacate.test
tests/amd/bulldozer/: amd-a10-4600m-apu-with-radeon-hd-graphics.test  amd-a10-5800k-apu-with-radeon-hd-graphics.test  amd-a10-6800k-apu-with-radeon-hd-graphics.test  amd-a10-7850k-radeon-r7-12-compute-cores-4c+8g.test  amd-a10-7890k-radeon-r7-12-compute-cores-4c+8g.test  amd-a10-8750-radeon-r7-12-compute-cores-4c+8g.test  amd-a10-pro-7350b-r6-10-compute-cores-4c+6g.test  amd-a12-9700p-radeon-r7-10-compute-cores-4c+6g.test  amd-a12-9800-radeon-r7-12-compute-cores-4c+8g.test  amd-a8-7670k-radeon-r7-10-compute-cores-4c+6g.test  amd-a8-7680-radeon-r7-10-compute-cores-4c+6g.test  amd-a9-9410-radeon-r5-5-compute-cores-2c+3g.test  amd-athlon-x4-870k-quad-core-processor.test  amd-fx-8150-eight-core-processor.test  amd-fx-8350-eight-core-processor.test  amd-fx-8800p-radeon-r7-12-compute-cores-4c+8g.test  amd-fx-9590-eight-core-processor.test  amd-opteron-processor-6238-dual.test  amd-opteron-processor-6238.test  amd-opteron-processor-6274-dual.test  amd-opteron-processor-6344-dual.test  amd-opteron-processor-6376-quad.test.xz  amd-opteron-x3216-apu.test  amd-pro-a12-8870-r7-12-compute-cores-4c+8g.test  bald-eagle-x4.test  bulldozer-x4.test  godavari-x4.test  kaveri-x4.test  opteron-abu-dhabi.test  opteron-interlagos.test  vishera-x4.test  zambezi-x3.test  zambezi-x4.test
tests/amd/jaguar/: amd-a4-5000-apu-with-radeon-hd-graphics.test  amd-a6-6310-apu-with-amd-radeon-r4-graphics.test  amd-a8-6410-apu-with-amd-radeon-r5-graphics.test  amd-athlon-5350-apu-with-radeon-r3.test  amd-athlon-5370-apu-with-radeon-r3.test  amd-gx-212jc-soc-with-radeon-r2e-graphics.test  amd-gx-218gl-soc-with-radeon-r1e-graphics.test  athlon-kabini.test  beema-x4.test  kabini-x4.test  steppe-eagle-x2.test
tests/amd/k10/: amd-a8-3850-apu-with-radeon-hd-graphics.test  amd-athlon-7750-dual-core-processor.test  amd-athlon-ii-x2-245-processor.test  amd-athlon-ii-x2-280-processor.test  amd-athlon-ii-x3-425-processor.test  amd-athlon-ii-x4-620-processor.test  amd-athlon-x2-250-processor.test  amd-e2-3000m-apu-with-radeon-hd-graphics.test  amd-opteron-processor-4176-he-dual.test  amd-phenom-9500-quad-core-processor.test  amd-phenom-9850-quad-core-processor.test  amd-phenom-ii-42-twkr-black-edition.test  amd-phenom-ii-x2-550-processor.test  amd-phenom-ii-x2-b55-processor.test  amd-phenom-ii-x4-940-processor.test  amd-phenom-ii-x6-1055t-processor.test  amd-processor-model-unknown.test  amd-sempron-140-processor.test  athlon-2-champlain-mobile.test  athlon-2-kuma.test  athlon-2-propus-2.test  athlon-2-propus-3.test  athlon-2-propus.test  athlon-2-regor.test  magny-cours.test  phenom-2-deneb.test  phenom-2-heka.test  phenom-2-regor.test  phenom-2-thuban.test  phenom-agena.test  quad-core-amd-opteron-processor-2344-he.test  quad-core-amd-opteron-processor-2347-he-dual.test  quad-core-amd-opteron-processor-2378-dual.test  sempron-sargas.test  six-core-amd-opteron-processor-2431-dual.test
tests/amd/k5/: amd-k5-pr100.test  amd-k5-pr133.test  amd-k5-pr166.test  amd-k5-pr200.test  amd-k5-pr75.test
tests/amd/k6/: amd-k6-2-chomper-extended.test  amd-k6-2-chomper.test  amd-k6-iii+.test  amd-k6.test  (+2 more)
tests/intel/: README.md
utils/: create_test_from_instlatx64.sh  decode_cpuid_revision.c  embed_windows_drivers.cpp  parse_arm_arm_pdf.sh
(+724 files in other folders)
