[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libcpuid"
version = "0.1.0"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [{name = "Pavol Žáčik", email = "zacikpa@gmail.com"}]
description = "Python bindings for the libcpuid C library"
